feat(mock-api): Setup in-memory-data using faker

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
+            "allowedCommonJsDependencies": [
+              "faker"
+            ],
             "scripts": []
           },
           "configurations": {
